[package]
name = "closures"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "closure_10"
path = "src/closure_10.rs"

[[bin]]
name = "closure_09"
path = "src/closure_09.rs"

[[bin]]
name = "closure_08"
path = "src/closure_08.rs"

[[bin]]
name = "closure_07"
path = "src/closure_07.rs"

[[bin]]
name = "closure_06"
path = "src/closure_06.rs"

[[bin]]
name = "closure_05"
path = "src/closure_05.rs"

[[bin]]
name = "closure_04"
path = "src/closure_04.rs"

[[bin]]
name = "closure_03"
path = "src/closure_03.rs"

[[bin]]
name = "closure_02"
path = "src/closure_02.rs"

[[bin]]
name = "closure_01"
path = "src/closure_01.rs"
